# Spam-Ham-rust-demo

./: .gitignore  Cargo.toml  README.md
src/: api.rs  inference.rs  lib.rs  main.rs  preprocessing.rs  training.rs
