[package]
name = "ml_rust"
version = "0.1.0"
edition = "2024"

[dependencies]
polars = { version = "0.41", features = ["csv", "lazy"] }
linfa = { version = "0.7", features = ["serde"] }
linfa-bayes = { version = "0.7", features = ["serde"] }
linfa-preprocessing = "0.7"
ndarray = { version = "0.15", features = ["serde"] }
regex = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
tower-http = { version = "0.5", features = ["cors"] }
stopwords = "0.1"
